# avoidance-system

./: .gitignore  README.md  TODO.txt  frames.gv
devel/: .catkin  .rosinstall  _setup_util.py
devel/lib/avoidance/: avoidance_mean_node.py
devel/lib/pkgconfig/: avoidance.pc
devel/share/avoidance/cmake/: avoidanceConfig.cmake
src/avoidance/: CMakeLists.txt
src/avoidance/src/: avoidance_object_node.py  depth_mean_node.py  depth_point_debugger_node.py  point_cloud_node.py  takeoff_node.py
src/cpp_avoidance/: CMakeLists.txt
src/cpp_avoidance/include/avoidance/: avoidance.h  lidar.h  octomap.h
src/cpp_avoidance/src/: avoidance.cpp  lidar.cpp  mothernode.py  octomap.cpp  path.py  rosbag_listener.py
src/droniada_test/: CMakeLists.txt
src/droniada_test/src/: test.py
src/my_avoidance/: CMakeLists.txt
src/my_avoidance/launch/: takeoff.launch
src/my_avoidance/src/: avoidance_mean_node.py  avoidance_object_node.py  depth_point_debugger_node.py  takeoff_node.py
src/transformer/: CMakeLists.txt
src/transformer/src/: transformer.py
utils/: avoidance.launch  sim_setup.sh
